--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "blade-ui-kit/blade-heroicons": "^2.4",
+        "blade-ui-kit/blade-icons": "^1.7",
+        "blade-ui-kit/blade-zondicons": "^1.5",
+        "codeat3/blade-humbleicons": "^1.0",
+        "khatabwedaa/blade-css-icons": "^1.4",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "ryangjchandler/blade-tabler-icons": "^2.3",
         "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
